# morphologist-nonfree

./: CMakeLists.txt  README.md  project_info.cmake  t1mri-private.bcg  t1mri.bcg
vip/doxygen/: CMakeLists.txt  doxygen_subst.dox  head_vip.html
vip/src/: CMakeLists.txt  src.pro
vip/src/VipAlternatedSequentialFilter/: alternatedSequentialFilter.c  alternatedSequentialFilter.pro
vip/src/VipAngleToDeplacement/: angleToDeplacement.c  angleToDeplacement.pro
vip/src/VipBiasCorrection/: bias.c  biasCorrection.pro  entropy.c
vip/src/VipCSFSeg/: csfseg.c  csfseg.pro
vip/src/VipClosing/: closing.c  closing.pro
vip/src/VipClusterArg/: clusterarg.c  clusterarg.pro
vip/src/VipConnexFilter/: connexFilter.c  connexFilter.pro
vip/src/VipConvert/: convert.c  convert.pro
vip/src/VipCovarianceMatrix/: covarianceMatrix.c  covarianceMatrix.pro
vip/src/VipCylinder/: cylinder.c  cylinder.pro
vip/src/VipDeriche/: deriche.c  deriche.pro
vip/src/VipDilation/: dilation.c  dilation.pro
vip/src/VipDistanceMap/: distanceMap.c  distanceMap.pro
vip/src/VipDoubleThreshold/: doubleThreshold.c  doubleThreshold.pro
vip/src/VipEpiCorrect/: epi_correct.c  vipepicorrect.pro
vip/src/VipEpiDistParam/: edit_param.c  vipepidistparam.pro
vip/src/VipEpiPhaseMap/: error.c  error.h  extrapolation.c  extrapolation.h  hgaussj.c  hgaussj.h  lfit.c  lfit.h  models.c  models.h  phasemap.c  reconstruct.c  reconstruct.h  segmentation.c  segmentation.h  unwrap.c  unwrap.h  unwrap_cst.c  unwrap_cst.h  vipepiphasemap.pro
vip/src/VipErosion/: erosion.c  erosion.pro
vip/src/VipExtEdge/: extEdge.c  extEdge.pro
vip/src/VipFileDump/: fileDump.c  fileDump.pro
vip/src/VipFlip/: flip.c  flip.pro
vip/src/VipFoetusHomotopicSnake/: foetushomotopicsnake.c  foetushomotopicsnake.pro
vip/src/VipFoldArg/: foldarg.c  foldarg.pro
vip/src/VipFoldArgAtt/: foldargatt.c  foldargatt.pro
vip/src/VipGaussian/: gaussian.c  gaussian.pro
vip/src/VipGeometry/: geometry.c  geometry.pro
vip/src/VipGetBrain/: getbrain.c  getbrain.pro
vip/src/VipGetHead/: gethead.c  gethead.pro
vip/src/VipGetSlice/: getSlice.c  getSlice.pro
vip/src/VipGreyStatFromClassif/: greystatfromclassif.c  greystatfromclassif.pro
vip/src/VipGreyWhiteClassif/: greywhiteclassif.c  greywhiteclassif.pro
vip/src/VipHistoAnalysis/: histoAnalysis.c  histoAnalysis.pro
vip/src/VipHomotopic/: homotopic.c  homotopic.pro
vip/src/VipHomotopicSnake/: homotopicsnake.c  homotopicsnake.pro
vip/src/VipHyste/: hyste.c  hyste.pro
vip/src/VipLabelArg/: labelarg.c  labelarg.pro
vip/src/VipLabelContour/: labelContour.c  labelContour.pro
vip/src/VipLabelMatching/: labelMatching.c  labelMatching.pro
vip/src/VipLabelOverlap/: labelOverlap.c  labelOverlap.pro
vip/src/VipLinComb/: linComb.c  linComb.pro
vip/src/VipLinearResamp/: linearResamp.c  linearResamp.pro
vip/src/VipListLabel/: list.c  list.pro
vip/src/VipMask/: mask.c  mask.pro
vip/src/VipMatching/: matching.c  matching.pro
vip/src/VipMerge/: merge.c  merge.pro
vip/src/VipMinimizeInformation/: MinimizeInformation.c  minimizeInformation.pro
vip/src/VipMoment/: moment.c  moment.pro
vip/src/VipOpenFold/: openfold.c  openfold.pro
vip/src/VipOpening/: opening.c  opening.pro
vip/src/VipPca/: pca.c  pca.pro
vip/src/VipSetPointValue/: setPointValue.c  setPointValue.pro
vip/src/VipSingleThreshold/: singleThreshold.c  singleThreshold.pro
vip/src/VipSkeleton/: skeleton.c  skeleton.pro
vip/src/VipSplineResamp/: splineResamp.c  splineResamp.pro
vip/src/VipSplit/: split.c  split.pro
vip/src/VipSplitBrain/: splitbrain.c  splitbrain.pro
vip/src/VipSubVolume/: subVolume.c  subVolume.pro
vip/src/VipSumFrame/: sumFrame.c  sumFrame.pro  sumUtil.c
vip/src/VipSwapEndian/: swapEndian.c  swapEndian.pro
vip/src/VipT1BiasCorrection/: T1biasCorrection.pro  bias.c  entropy.c
vip/src/VipTalairachCoordinates/: talcoord.c  talcoord.pro
vip/src/VipTalairachTransform/: talairachtransform.c  talairachtransform.pro
vip/src/VipTopoClassifMeaning/: topoClassifMeaning.c  topoClassifMeaning.pro
vip/src/VipTopoClassification/: topoClassification.c  topoClassification.pro
vip/src/VipTransform/: transform.c  transform.pro
vip/src/VipTriangle/: triangle.c  triangle.pro
vip/src/VipVFilter/: vfilter.c  vfilter.pro
vip/src/VipVoiStat/: statistiques.c  statistiques.pro
vip/src/VipVoronoi/: voronoi.c  voronoi.pro
vip/src/libvip/: CMakeLists.txt  MakePackage  TivoliIO.h  activations.h  alloc.h  brain.h  bucket.h  bucket_static.h  connex.h  connex_static.h  cylinder.h  depla.h  depla_static.h  deriche.h  deriche_static.h  distmap.h  distmap_static.h  eigen.h  fold_arg.h  fold_arg_static.h  gaussian.h  gaussian_static.h  geometry.h  histo.h  histo_static.h  label.h  libvip.pro  linresamp.h  linresamp_static.h  matching.h  math.h  minc.h  moment.h  morpho.h  nomen.h  object.h  pca.h  pvec.h  pyramid.h  skeleton.h  (+17 more)
vip/src/libvip/TivoliIO/: TivoliIO_util.h  TivoliIO_volume.h  byteswapping.gen  tivoli_util.c  tivoli_volume.c
vip/src/libvip/activations/: cluster.c
vip/src/libvip/alloc/: alloc.c  alloc.gen
vip/src/libvip/brain/: brain.c  potts.c
vip/src/libvip/bucket/: bucket.c  bucket.gen  bucket_struct.gen  bucket_write.gen
vip/src/libvip/connex/: 3Dconnex.c  3Dconnex.gen  connex.c
vip/src/libvip/cylinder/: cylinder.c  cylinder.h
vip/src/libvip/depla/: depla.c  mat.c
vip/src/libvip/deriche/: deriche.c  deriche.gen  deriche3D.c  extedge.gen
vip/src/libvip/distmap/: distmap.c  distmap_mask.c  distmap_sweeping.c  front.c  voronoi.c
vip/src/libvip/eigen/: eigen.gen
vip/src/libvip/epidistorsion/: convolution.c  convolution.h  cpp_defs.h  debug.c  debug.h  dyn_alloc.c  dyn_alloc.h  fourier.c  fourier.h  gravity.c  gravity.h  morpho.c  morpho.h  param.h  param_io.c  param_io.h  readwrite.c  readwrite.h  sort.c  sort.h  utils.c  utils.h  volume_io.c  volume_io.h  volume_utils.c  volume_utils.h
vip/src/preprocessor/: CMakeLists.txt  preprocessing.c  preprocessing.pro
vip/src/tests/: CMakeLists.txt  well_composed_configurations.c  well_composed_topology.c
(+140 files in other folders)
