cmake_minimum_required( VERSION 2.6 )

find_package( brainvisa-cmake REQUIRED )

BRAINVISA_PROJECT()

BRAINVISA_FIND_PACKAGE( soma-base REQUIRED )
BRAINVISA_ADD_RUNTIME_DEPENDENCY( SOMA soma-base REQUIRED )
BRAINVISA_FIND_PACKAGE( aims-free REQUIRED )
BRAINVISA_ADD_RUNTIME_DEPENDENCY( SOMA aims-free REQUIRED )


add_subdirectory( vip )

# SOMA_CREATE_CMAKE_CONFIG_FILES()
