FIND_PACKAGE( Doxygen )
IF ( DOXYGEN_FOUND )
  INCLUDE( SomaMacros )
  SET( DOXYFILE_HTML_HEADER "\"${DOXYGEN_BINARY_DIR}/head_vip.html\"" )
  SET( DOXYFILE_OPTIMIZE_OUTPUT_FOR_C YES )
  SET( DOXYFILE_BUILTIN_STL_SUPPORT NO )
  FILE( READ "${DOXYGEN_BINARY_DIR}/doxygenInput" _doxygenInput )
  SOMA_GENERATE_DOXYGEN_DOC( ${PROJECT_NAME}_doxygen _doxygenInput head_vip.html vip.gif )
ENDIF ( DOXYGEN_FOUND )
